test grid working with mock data

--- a/tiv-app/jsconfig.json
+++ b/tiv-app/jsconfig.json
@@ -1,7 +1,11 @@
 {
-  "exclude": ["node_modules"],
+  "exclude": [
+    "node_modules"
+  ],
   "compilerOptions": {
     "experimentalDecorators": true
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
