--- a/tiv-app/.babelrc
+++ b/tiv-app/.babelrc
@@ -11,6 +11,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    "@babel/plugin-transform-runtime",
     [
       "@babel/plugin-proposal-decorators",
       {
