--- a/tiv-app/.eslintrc.json
+++ b/tiv-app/.eslintrc.json
@@ -1,19 +1,57 @@
 {
+  "root": true,
+  "plugins": [
+    "react",
+    "import",
+    "jsx-a11y"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended"
+  ],
+  "parser": "@babel/eslint-parser",
   "env": {
+    "es6": true,
     "browser": true,
+    "node": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "airbnb", "babel-eslint"],
   "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module",
+    "requireConfigFile": false,
     "ecmaFeatures": {
       "jsx": true,
+      "modules": true,
       "legacyDecorators": true
-    },
-    "ecmaVersion": 2021,
-    "sourceType": "module"
+    }
   },
-  "plugins": ["react"],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "indent": [
+      "error",
+      "tab"
+    ],
+    "react/prop-types": 0,
+    "linebreak-style": 1,
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    ]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
