--- a/tiv-app/package.json
+++ b/tiv-app/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config start.js",
-    "build": "webpack --config build.js"
+    "build": "webpack --config build.js",
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
+    "lint:fix": "eslint \"src/**/*.{js,jsx}\" --fix"
   },
   "keywords": [
     "TIV"
@@ -13,6 +15,10 @@
   "author": "Sunil",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.16.5",
+    "ag-grid-community": "^26.2.1",
+    "ag-grid-react": "^26.2.0",
+    "axios": "^0.24.0",
     "mobx": "^6.3.9",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
@@ -20,8 +26,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
+    "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-proposal-class-properties": "^7.16.5",
     "@babel/plugin-proposal-decorators": "^7.16.5",
+    "@babel/plugin-transform-runtime": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "babel-eslint": "^10.1.0",
@@ -29,10 +37,12 @@
     "css-loader": "^6.5.1",
     "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.2",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
     "sass": "^1.45.0",
