--- a/tiv-app/.eslintrc.json
+++ b/tiv-app/.eslintrc.json
@@ -9,7 +9,8 @@
     "eslint:recommended",
     "plugin:import/errors",
     "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended"
+    "plugin:jsx-a11y/recommended",
+    "plugin:react-hooks/recommended"
   ],
   "parser": "@babel/eslint-parser",
   "env": {
