--- a/tiv-app/package.json
+++ b/tiv-app/package.json
@@ -19,10 +19,12 @@
     "ag-grid-community": "^26.2.1",
     "ag-grid-react": "^26.2.0",
     "axios": "^0.24.0",
+    "history": "^5.2.0",
     "mobx": "^6.3.9",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
