--- a/tiv-app/package.json
+++ b/tiv-app/package.json
@@ -19,11 +19,13 @@
     "ag-grid-community": "^26.2.1",
     "ag-grid-react": "^26.2.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "history": "^5.2.0",
     "mobx": "^6.3.9",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1"
