--- a/tiv-app/package.json
+++ b/tiv-app/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "history": "^5.2.0",
+    "lodash": "^4.17.21",
     "mobx": "^6.3.9",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
