--- a/tiv-app/package.json
+++ b/tiv-app/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "history": "^5.2.0",
     "lodash": "^4.17.21",
     "mobx": "^6.3.9",
